# discord-aqua

./: .gitignore  AIapi.cpp  CMakeLists.txt  LICENSE  MyBot.vcxproj  MyBot.vcxproj.filters  bot.cpp  readme.md  replit.nix  token.json.example
header/: AIapi.h  Encode-decode.h  bypasslink.h  error.h  game.h  request.h  youtubeapi.h
src/: AIapi.cpp  Encode-decode.cpp  bypasslink.cpp  game.cpp  request.cpp  youtubeapi.cpp
